output/release/v4.6.1/SCREENSHOT_INDEX.md
# v4.6.1 Release Evidence

Captured from the built React/Vite app served by the release visual API on 2026-06-14T04:56:57.926Z.

## Screenshots

| File | Flow |
| --- | --- |
| [01-login.png](screenshots/01-login.png) | Login |
| [02-environment-analysis.png](screenshots/02-environment-analysis.png) | Environment Analysis |
| [03-recommended-models.png](screenshots/03-recommended-models.png) | Recommended Models |
| [04-install-load-progress.png](screenshots/04-install-load-progress.png) | Install & Load progress |
| [05-brain-chat-home.png](screenshots/05-brain-chat-home.png) | Brain Chat home |
| [06-living-brain-level-1.png](screenshots/06-living-brain-level-1.png) | Living Brain Level 1 |
| [07-memory-layer.png](screenshots/07-memory-layer.png) | Memory Layer |
| [08-knowledge-layer.png](screenshots/08-knowledge-layer.png) | Knowledge Layer |
| [09-relationship-layer.png](screenshots/09-relationship-layer.png) | Relationship Layer |
| [10-knowledge-graph-layer.png](screenshots/10-knowledge-graph-layer.png) | Knowledge Graph layer with search |
| [11-model-setup-status.png](screenshots/11-model-setup-status.png) | Model setup status |

## Motion Evidence

- [v4.6.1-living-brain-walkthrough.webm](videos/v4.6.1-living-brain-walkthrough.webm)
- [v4.6.1-living-brain-walkthrough.gif](gifs/v4.6.1-living-brain-walkthrough.gif)
